--- a/force-app/main/default/classes/TCP_OrderController.cls
+++ b/force-app/main/default/classes/TCP_OrderController.cls
@@ -529,13 +529,13 @@ public static string tcpOrderRecTypeid = Schema.SObjectType.Order.getRecordTypeI
             if(ordWrap.soldToId != null || ordWrap.soldToIdList.size()>0){
                 List<Order> ordList = new List<Order>();
                 List<String> soldToIds = ordWrap.soldToIdList;
-               String queryString = 'SELECT Id,Sold_To__c, TCP_Modification_Requested_By__r.name, TCP_Modification_Requested_Date__c, TCP_Cancellation_Placed_By__r.name, TCP_Cancellation_Requested_Date__c, Sales_Order_Number__c, Account.ShippingCity, Account.ShippingAddress, Ship_To__r.ShippingAddress, Bill_To__r.ShippingAddress, Customer_Name__c, Delivery_Terms__c, Mode_of_Transport__c, PoNumber, Order_Other_Instructions__c,OrderNumber, Name, Ship_To__r.Name, Bill_To__r.Name,ordered_by__c, CreatedDate, TCP_Order_Status__c,Chemical_GSAP_P_31__c,Third_Party__c,Late_Order__c,Rush_Order__c,Last_Minute_Changes__c,Reviewed_By__r.Name,Reviewed_Date_Time__c,Remarks__c, Ordered_By__r.Name, (select id, Quantity__c, Unit__c, Delivery_Collection_Date__c, Contract_No__c, Other_Instruction__c, Order__c, Product__c, Material_Name__c, MaterialNumber__c,GSAP_Due_Date__c,GSAP_Dispatch_Date__c,Expected_Dispatch_Date__c,GSAP_Bol_Delivery__c,GSAP_Mode_of_Transport_ID__c,GSAP_Goods_Issue_Date__c,GSAP_Goods_Issue_value__c,GSAP_Goods_Issue_Unit__c,GSAP_Goods_Issue_Status__c from order_line_items__r Order By CreatedDate) from Order where recordtypeid=:tcpOrderRecTypeid and Sold_To__c='+'\''+ordWrap.soldToId+'\'';
+               String queryString = 'SELECT Id,Sold_To__c,Account.AccountNumber,TCP_GSAP_Account_Name__c,TCP_GSAP_Account_Number__c, TCP_Modification_Requested_By__r.name, TCP_Modification_Requested_Date__c, TCP_Cancellation_Placed_By__r.name, TCP_Cancellation_Requested_Date__c, Sales_Order_Number__c, Account.ShippingCity, Account.ShippingAddress, Ship_To__r.ShippingAddress, Bill_To__r.ShippingAddress, Customer_Name__c, Delivery_Terms__c, Mode_of_Transport__c, PoNumber, Order_Other_Instructions__c,OrderNumber, Name, Ship_To__r.Name, Bill_To__r.Name,ordered_by__c, CreatedDate, TCP_Order_Status__c,Chemical_GSAP_P_31__c,Third_Party__c,Late_Order__c,Rush_Order__c,Last_Minute_Changes__c,Reviewed_By__r.Name,Reviewed_Date_Time__c,Remarks__c, Ordered_By__r.Name, (select id, Quantity__c, Unit__c, Delivery_Collection_Date__c, Contract_No__c, Other_Instruction__c, Order__c, Product__c, Material_Name__c, MaterialNumber__c,GSAP_Due_Date__c,GSAP_Dispatch_Date__c,Expected_Dispatch_Date__c,GSAP_Bol_Delivery__c,GSAP_Mode_of_Transport_ID__c,GSAP_Goods_Issue_Date__c,GSAP_Goods_Issue_value__c,GSAP_Goods_Issue_Unit__c,GSAP_Goods_Issue_Status__c from order_line_items__r Order By CreatedDate) from Order where recordtypeid=:tcpOrderRecTypeid and Sold_To__c='+'\''+ordWrap.soldToId+'\'';
                String lineQueryString = '';
                 if(String.isNotBlank(userType) && userType == 'Comm Ops User'){
-                    queryString = 'SELECT Id,Sold_To__c,TCP_Modification_Requested_By__r.name, TCP_Modification_Requested_Date__c, TCP_Cancellation_Placed_By__r.name, TCP_Cancellation_Requested_Date__c, Sales_Order_Number__c, Account.ShippingAddress,Account.Shippingcity, Ship_To__r.ShippingAddress, Bill_To__r.ShippingAddress, Customer_Name__c, Delivery_Terms__c, Mode_of_Transport__c, PoNumber, Order_Other_Instructions__c,OrderNumber, Name, Ship_To__r.Name, Bill_To__r.Name,ordered_by__c, CreatedDate, TCP_Order_Status__c,Chemical_GSAP_P_31__c,Third_Party__c,Late_Order__c,Rush_Order__c,Last_Minute_Changes__c,Reviewed_By__r.Name,Reviewed_Date_Time__c,Remarks__c, Ordered_By__r.Name, (select id, Quantity__c, Unit__c, Delivery_Collection_Date__c, Contract_No__c, Other_Instruction__c, Order__c, Product__c, Material_Name__c, MaterialNumber__c,GSAP_Due_Date__c,GSAP_Dispatch_Date__c,Expected_Dispatch_Date__c,GSAP_Bol_Delivery__c,GSAP_Mode_of_Transport_ID__c,GSAP_Goods_Issue_Date__c,GSAP_Goods_Issue_value__c,GSAP_Goods_Issue_Unit__c,GSAP_Goods_Issue_Status__c from order_line_items__r Order By CreatedDate) from Order where recordtypeid=:tcpOrderRecTypeid and TCP_Order_Status__c!=\'Draft\' and Sold_To__c IN:soldToIds';
+                    queryString = 'SELECT Id,Account.AccountNumber,TCP_GSAP_Account_Name__c,TCP_GSAP_Account_Number__c,Sold_To__c,TCP_Modification_Requested_By__r.name, TCP_Modification_Requested_Date__c, TCP_Cancellation_Placed_By__r.name, TCP_Cancellation_Requested_Date__c, Sales_Order_Number__c, Account.ShippingAddress,Account.Shippingcity, Ship_To__r.ShippingAddress, Bill_To__r.ShippingAddress, Customer_Name__c, Delivery_Terms__c, Mode_of_Transport__c, PoNumber, Order_Other_Instructions__c,OrderNumber, Name, Ship_To__r.Name, Bill_To__r.Name,ordered_by__c, CreatedDate, TCP_Order_Status__c,Chemical_GSAP_P_31__c,Third_Party__c,Late_Order__c,Rush_Order__c,Last_Minute_Changes__c,Reviewed_By__r.Name,Reviewed_Date_Time__c,Remarks__c, Ordered_By__r.Name, (select id, Quantity__c, Unit__c, Delivery_Collection_Date__c, Contract_No__c, Other_Instruction__c, Order__c, Product__c, Material_Name__c, MaterialNumber__c,GSAP_Due_Date__c,GSAP_Dispatch_Date__c,Expected_Dispatch_Date__c,GSAP_Bol_Delivery__c,GSAP_Mode_of_Transport_ID__c,GSAP_Goods_Issue_Date__c,GSAP_Goods_Issue_value__c,GSAP_Goods_Issue_Unit__c,GSAP_Goods_Issue_Status__c from order_line_items__r Order By CreatedDate) from Order where recordtypeid=:tcpOrderRecTypeid and TCP_Order_Status__c!=\'Draft\' and Sold_To__c IN:soldToIds';
                     lineQueryString = 'SELECT Order__c FROM TCP_OrderLineItem__c where Order__r.Sold_To__c IN:soldToIds';
                 }else if(String.isNotBlank(userType) && userType == 'End User'){
-                    queryString = 'SELECT Id, Sold_To__c,TCP_Modification_Requested_By__r.name, TCP_Modification_Requested_Date__c, TCP_Cancellation_Placed_By__r.name, TCP_Cancellation_Requested_Date__c,Sales_Order_Number__c, Ordered_By__r.Name, Account.ShippingAddress,Account.ShippingCity, Ship_To__r.ShippingAddress, Bill_To__r.ShippingAddress, Customer_Name__c, Delivery_Terms__c, Mode_of_Transport__c, PoNumber, Order_Other_Instructions__c,OrderNumber, Name, Ship_To__r.Name, Bill_To__r.Name, CreatedDate, TCP_Order_Status__c,Remarks__c,Chemical_GSAP_P_31__c,Third_Party__c, (select id, Quantity__c, Unit__c, Delivery_Collection_Date__c, Contract_No__c, Other_Instruction__c, Order__c, Product__c, Material_Name__c, MaterialNumber__c from order_line_items__r Order By CreatedDate) from Order where recordtypeid=:tcpOrderRecTypeid AND Sold_To__c='+'\''+ordWrap.soldToId+'\'';
+                    queryString = 'SELECT Id,Account.AccountNumber,TCP_GSAP_Account_Name__c,TCP_GSAP_Account_Number__c, Sold_To__c,TCP_Modification_Requested_By__r.name, TCP_Modification_Requested_Date__c, TCP_Cancellation_Placed_By__r.name, TCP_Cancellation_Requested_Date__c,Sales_Order_Number__c, Ordered_By__r.Name, Account.ShippingAddress,Account.ShippingCity, Ship_To__r.ShippingAddress, Bill_To__r.ShippingAddress, Customer_Name__c, Delivery_Terms__c, Mode_of_Transport__c, PoNumber, Order_Other_Instructions__c,OrderNumber, Name, Ship_To__r.Name, Bill_To__r.Name, CreatedDate, TCP_Order_Status__c,Remarks__c,Chemical_GSAP_P_31__c,Third_Party__c, (select id, Quantity__c, Unit__c, Delivery_Collection_Date__c, Contract_No__c, Other_Instruction__c, Order__c, Product__c, Material_Name__c, MaterialNumber__c from order_line_items__r Order By CreatedDate) from Order where recordtypeid=:tcpOrderRecTypeid AND Sold_To__c='+'\''+ordWrap.soldToId+'\'';
                     lineQueryString = 'SELECT Order__c FROM TCP_OrderLineItem__c where Order__r.Sold_To__c ='+'\''+ordWrap.soldToId+'\'';
                 } 
                 Integer queryNoOfDays=TCP_Utilities.getQueryDaysForSelectedTile(selectedTile); 
